@@ -1467,37 +1467,56 @@ line with an indentation cycle."
 in the current buffer.")
 (make-variable-buffer-local 'haskell-indent-mode)
 
+(defvar haskell-indent-map
+  (let ((map (make-sparse-keymap)))
+    ;; Removed: remapping DEL seems a bit naughty --SDM
+    ;; (define-key map "\177"  'backward-delete-char-untabify)
+    ;; The binding to TAB is already handled by indent-line-function.  --Stef
+    ;; (define-key map "\t"    'haskell-indent-cycle)
+    (define-key map [?\C-c ?\C-=] 'haskell-indent-insert-equal)
+    (define-key map [?\C-c ?\C-|] 'haskell-indent-insert-guard)
+    ;; Alternate binding, in case C-c C-| is too inconvenient to type.
+    (define-key map [?\C-c ?\C-g] 'haskell-indent-insert-guard)
+    (define-key map [?\C-c ?\C-o] 'haskell-indent-insert-otherwise)
+    (define-key map [?\C-c ?\C-w] 'haskell-indent-insert-where)
+    (define-key map [?\C-c ?\C-.] 'haskell-indent-align-guards-and-rhs)
+    (define-key map [?\C-c ?\C->] 'haskell-indent-put-region-in-literate)
+    map))
+
 (defun turn-on-haskell-indent ()
   "Turn on ``intelligent'' haskell indentation mode."
   (set (make-local-variable 'indent-line-function) 'haskell-indent-cycle)
-  ;; Removed: remapping DEL seems a bit naughty --SDM
-  ;; (local-set-key "\177"  'backward-delete-char-untabify)
-  ;; The binding to TAB is already handled by indent-line-function.  --Stef
-  ;; (local-set-key "\t"    'haskell-indent-cycle)
-  (local-set-key [?\C-c ?\C-=] 'haskell-indent-insert-equal)
-  (local-set-key [?\C-c ?\C-|] 'haskell-indent-insert-guard)
-  ;; Alternate binding, in case C-c C-| is too inconvenient to type.
-  (local-set-key [?\C-c ?\C-g] 'haskell-indent-insert-guard)
-  (local-set-key [?\C-c ?\C-o] 'haskell-indent-insert-otherwise)
-  (local-set-key [?\C-c ?\C-w] 'haskell-indent-insert-where)
-  (local-set-key [?\C-c ?\C-.] 'haskell-indent-align-guards-and-rhs)
-  (local-set-key [?\C-c ?\C->] 'haskell-indent-put-region-in-literate)
   (setq haskell-indent-mode t)
+  ;; Activate our keymap.
+  (let ((map (current-local-map)))
+    (while (and map (not (eq map haskell-indent-map)))
+      (setq map (keymap-parent map)))
+    (if map
+        ;; haskell-indent-map is already active: nothing to do.
+        nil
+      ;; Put our keymap on top of the others.  We could also put it in
+      ;; second place, or in a minor-mode.  The minor-mode approach would be
+      ;; easier, but it's harder for the user to override it.  This approach
+      ;; is the closest in behavior compared to the previous code that just
+      ;; used a bunch of local-set-key.
+      (set-keymap-parent haskell-indent-map map)
+      ;; Protect our keymap.
+      (setq map (make-sparse-keymap))
+      (set-keymap-parent map haskell-indent-map)
+      (use-local-map map)))
   (run-hooks 'haskell-indent-hook))
 
 (defun turn-off-haskell-indent ()
   "Turn off ``intelligent'' haskell indentation mode that deals with
 the layout rule of Haskell."
   (kill-local-variable 'indent-line-function)
-  ;; (local-unset-key "\t")
-  ;; (local-unset-key "\177")
-  (local-unset-key [?\C-c ?\C-=])
-  (local-unset-key [?\C-c ?\C-|])
-  (local-unset-key [?\C-c ?\C-g])
-  (local-unset-key [?\C-c ?\C-o])
-  (local-unset-key [?\C-c ?\C-w])
-  (local-unset-key [?\C-c ?\C-.])
-  (local-unset-key [?\C-c ?\C->])
+  ;; Remove haskell-indent-map from the local map.
+  (let ((map (current-local-map)))
+    (while map
+      (let ((parent (keymap-parent map)))
+        (if (eq haskell-indent-map parent)
+            (set-keymap-parent map (keymap-parent parent))
+          (setq map parent)))))
   (setq haskell-indent-mode nil))
 
 ;; Put this minor mode on the global minor-mode-alist.
